# zmq-rust-example

./: Cargo.toml  build.rs
src/: lib.rs  main.rs  prover.proto  prover_test.rs
