[package]
name = "zmq-rust-example"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
prost = "0.12.3"
zmq = "0.10.0"
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["rt", "time", "rt-multi-thread", "macros"] }
tokio-macros = "2.2.0"

[build-dependencies]
prost-build = "0.12.3"
protobuf-zmq-rust-generator = "0.1.0"
